etc/iptables/iptables.rules
# Generated by iptables-save v1.4.21 on Wed Feb 17 22:01:07 2016
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [170:20712]
:TCP - [0:0]
:UDP - [0:0]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -p icmp -m icmp --icmp-type 8 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p udp -m conntrack --ctstate NEW -j UDP
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j TCP
-A INPUT -p udp -j REJECT --reject-with icmp-port-unreachable
-A INPUT -p tcp -j REJECT --reject-with tcp-reset
-A INPUT -j REJECT --reject-with icmp-proto-unreachable
# SSH
#-A TCP -p tcp -m tcp --dport 22 -j ACCEPT
# Misc.
#-A TCP -p tcp -m tcp --dport 9080 -j ACCEPT
#-A TCP -p tcp -m tcp --dport 22000 -j ACCEPT
# Chromecast
#-A TCP -p tcp -m tcp --dport 8008:8009 -j ACCEPT
#-A TCP -p tcp -m tcp --dport 8443 -j ACCEPT
#-A UDP -p udp -m udp --dport 32768:61000 -j ACCEPT
COMMIT
# Completed on Wed Feb 17 22:01:07 2016
# Generated by iptables-save v1.4.21 on Wed Feb 17 22:01:07 2016
*raw
:PREROUTING ACCEPT [169:36258]
:OUTPUT ACCEPT [170:20712]
-A PREROUTING -m rpfilter --invert -j DROP
COMMIT
# Completed on Wed Feb 17 22:01:07 2016
